data/derived/sp14/progs/unify/prog4758.ml.out
Characters 56-59:
  wwhile(f b, b);;
         ^^^
Error: This expression has type ('a -> 'a) * bool
       but an expression was expected of type 'b -> 'b * bool
